user js added and connected to server

--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -153,7 +153,7 @@
             />
             <label for="female">دختر</label>
           </div>
-          <div id="birthday-field" class="form__field">
+          <div id="birthday-field" class="form__field form__field--not-empty">
             <input
               id="birthday"
               name="birthday"
