--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -84,20 +84,29 @@
     </nav>
 
     <template id="song__item__template">
-      <a class="song__item" href="./song.html?id=">
-        <img class="song__item__image" src="" alt="song cover" />
-        <span class="song__item__name"></span>
-        <span class="song__item__singer"></span>
-      </a>
+      <li class="song__item__box">
+        <a class="song__item" href="./song.html?id=">
+          <img class="song__item__image" src="" alt="" loading="lazy" />
+          <div class="song__item__info">
+            <h3 class="song__item__name"></h3>
+            <span class="song__item__singer"></span>
+          </div>
+        </a>
+      </li>
     </template>
 
     <template id="song__gener__template">
       <section class="song__gener">
-        <div>
+        <div class="song__gener__header">
           <h2 class="song__gener__name"></h2>
-          <a class="song__gener__show-all button--inline" href="./song-gener.html?gener=">نمایش همه</a>
+          <a
+            class="song__gener__show-all button--inline"
+            href="./song-gener.html?gener="
+          >
+            نمایش همه
+          </a>
         </div>
-        <div class="song__gener__container"></div>
+        <ul class="song__gener__container"></ul>
       </section>
     </template>
 
