make song__item component

--- a/src/pages/song-list.html
+++ b/src/pages/song-list.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/components/song-item.css" />
     <link rel="stylesheet" href="../style/css/song-list.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <title>لیست آهنگ ها |‌ آهنگیفای</title>
@@ -83,13 +84,13 @@
       </ul>
     </nav>
 
-    <template id="song__item__template">
-      <li class="song__item__box">
-        <a class="song__item" href="./song.html?id=">
-          <img class="song__item__image" src="" alt="" loading="lazy" />
-          <div class="song__item__info">
-            <h3 class="song__item__name"></h3>
-            <span class="song__item__singer"></span>
+    <template id="song__unit__template">
+      <li class="song__unit__box">
+        <a class="song__unit" href="./song.html?id=">
+          <img class="song__unit__image" src="" alt="" loading="lazy" />
+          <div class="song__unit__info">
+            <h3 class="song__unit__name"></h3>
+            <span class="song__unit__singer"></span>
           </div>
         </a>
       </li>
