make form-field.scss real file

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
-    <link rel="stylesheet" href="../style/css/form.css" />
+    <link rel="stylesheet" href="../style/css/components/form-field.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/api/index.js"></script>
@@ -107,7 +107,7 @@
       </li>
     </template>
 
-    <main class="play-list">
+    <main>
       <section class="song__info">
         <img id="user-image" class="song__image" src="" alt="عکس آهنگ" />
 
