--- a/src/pages/sign-up.html
+++ b/src/pages/sign-up.html
@@ -6,6 +6,7 @@
     <title>ثبت نام | آهنگیفای</title>
     <link rel="stylesheet" href="../style/css/main.css" />
     <link rel="stylesheet" href="../style/css/form.css" />
+    <link rel="stylesheet" href="../style/css/components/form-field.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
     <script src="../script/api/index.js"></script>
