--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -111,7 +111,7 @@
       <section class="user__info">
         <div class="user__image"></div>
         <h1 class="user__name"></h1>
-        <button class="button--icon" data-label="ایجاد پلی لیست">
+        <button id='add-to-play-list' class="button--icon" data-label="ایجاد پلی لیست">
           <svg>
             <use xlink:href="../assets/image/sprite.svg#add" />
           </svg>
