fix user invalid style

--- a/src/pages/user.html
+++ b/src/pages/user.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../style/css/components/nav.css" />
     <link rel="stylesheet" href="../style/css/components/footer.css" />
     <link rel="stylesheet" href="../style/css/components/button.css" />
+    <link rel="stylesheet" href="../style/css/components/form-field.css" />
     <link rel="stylesheet" href="../style/css/form.css" />
     <link rel="stylesheet" href="../style/css/user.css" />
     <link rel="icon" href="../assets/image/favicon.ico" />
@@ -135,7 +136,6 @@
         <section class="form__update__container">
           <div class="form__update__container--radio">
             <input
-              class="form__field__input"
               type="radio"
               id="male"
               name="gender"
@@ -145,7 +145,6 @@
           </div>
           <div class="form__update__container--radio">
             <input
-              class="form__field__input"
               type="radio"
               id="female"
               name="gender"
