load song in song html

--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -170,7 +170,7 @@
               </label>
             </button>
             <div>
-              <span></span>
+              <input type="range" id="volume-controller" />
             </div>
           </div>
           <div class="audio__actions">
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="audio__timeline">
-          <span></span>
+          <input type="range" id="timeline-controller" />
         </div>
       </div>
     </main>
