--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -170,7 +170,7 @@
               </label>
             </button>
             <div>
-              <input type="range" id="volume-controller" />
+              <input type="range" id="volume-controller" value="25" />
             </div>
           </div>
           <div class="audio__actions">
@@ -207,7 +207,7 @@
           </div>
         </div>
         <div class="audio__timeline">
-          <input type="range" id="timeline-controller" />
+          <input type="range" id="timeline-controller" value="0" />
         </div>
       </div>
     </main>
