add alt to footer image and fix its link

--- a/src/pages/play-list.html
+++ b/src/pages/play-list.html
@@ -130,8 +130,8 @@
         </a>
       </div>
 
-      <a href="./">
-        <img src="../assets/image/favicon.png" alt="" loading="lazy" />
+      <a href="./index.html">
+        <img src="../assets/image/favicon.png" alt="آهنگیفای" loading="lazy" />
       </a>
     </footer>
   </body>
