--- a/src/pages/song.html
+++ b/src/pages/song.html
@@ -301,8 +301,8 @@
         </a>
       </div>
 
-      <a href="./">
-        <img src="../assets/image/favicon.png" alt="" loading="lazy" />
+      <a href="./index.html">
+        <img src="../assets/image/favicon.png" alt="آهنگیفای" loading="lazy" />
       </a>
     </footer>
   </body>
